force-app/main/default/objects/BatchInfo__c/BatchInfo__c.object-meta.xml
<CustomObject>
    <label>Batch Info</label>
    <nameField>
        <label>Batch Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>