force-app/main/default/objects/BatchInfo__c/fields/Chart_Name__c.field-meta.xml
<CustomField>
    <fullName>Chart_Name__c</fullName>
    <label>Chart Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>