force-app/main/default/objects/BatchInfo__c/fields/DataRepresentation__c.field-meta.xml
<CustomField>
    <fullName>DataRepresentation__c</fullName>
    <label>Data Representation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>