force-app/main/default/objects/BatchInfo__c/fields/DataRepresentationPerRecordType__c.field-meta.xml
<CustomField>
    <fullName>DataRepresentationPerRecordType__c</fullName>
    <label>Data Representation Per Record Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>