force-app/main/default/objects/BatchInfo__c/fields/Filter_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Name__c</fullName>
    <label>Filter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>