force-app/main/default/objects/BatchInfo__c/fields/History_Switch__c.field-meta.xml
<CustomField>
    <fullName>History_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History Switch</label>
    <type>Checkbox</type>
</CustomField>