force-app/main/default/objects/BatchInfo__c/fields/LastRefreshedDate__c.field-meta.xml
<CustomField>
    <fullName>LastRefreshedDate__c</fullName>
    <label>Last Refreshed Date</label>
    <type>DateTime</type>
</CustomField>