force-app/main/default/objects/BatchInfo__c/fields/OwnerDataRepresentation__c.field-meta.xml
<CustomField>
    <fullName>OwnerDataRepresentation__c</fullName>
    <label>Owner Data Representation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>