force-app/main/default/objects/BatchInfo__c/fields/SobjectFieldType__c.field-meta.xml
<CustomField>
    <fullName>SobjectFieldType__c</fullName>
    <label>Sobject Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>