force-app/main/default/objects/BatchInfo__c/fields/SobjectFieldValue__c.field-meta.xml
<CustomField>
    <fullName>SobjectFieldValue__c</fullName>
    <label>Sobject Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>