force-app/main/default/objects/BatchInfo__c/fields/SobjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>SobjectRecordType__c</fullName>
    <label>Sobject Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>