force-app/main/default/objects/BatchInfo__c/fields/SobjectType__c.field-meta.xml
<CustomField>
    <fullName>SobjectType__c</fullName>
    <label>Sobject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>