force-app/main/default/objects/BatchInfo__c/fields/WillRefresh__c.field-meta.xml
<CustomField>
    <fullName>WillRefresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Refresh</label>
    <type>Checkbox</type>
</CustomField>