force-app/main/default/objects/BatchInfo__c/recordTypes/Track.recordType-meta.xml
<RecordType>
    <fullName>Track</fullName>
    <active>true</active>
    <label>Track</label>
</RecordType>